Holy grail added

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -13,8 +13,25 @@
             </header>
             <nav>
                 <u1>
-                    <li></li>
+                    <li><a href="https://byui.edu">BYU-Idaho</a></li>
+                    <li><a href="https://churchuofjesuschrist.org">The Church</a></li>
                 </u1>
             </nav>
+            <main>
+                <section>
+                    <h2>Heading</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, Molestiae, tenetur ...</p>
+                </section>
+                <section>
+                    <h2>Heading</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit, Molestiae, tenetur ...</p>
+                </section>
+            </main>
+            <aside>
+                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/800x500/payson-utah-temple-celestial-room-1458545.jpg" alt="Payson Utah Temple Celestial Room" width="200">
+            </aside>
+            <footer>
+                <p>🌴 Emmanuel Ogbonna</p>
+            </footer>
         </body>
         </html>
