--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
     <head>
-        <link rel="stylesheet" href="styles/styles.css">
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Emmanuel Ogbonna |   WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
+
     <body>
         <header>
             <nav>
-                <a href="#">Home`</a>
+                <a href="#">Home</a>
                 <a href="wwr/">Rafting Site</a>
             </nav>
         </header>
@@ -22,4 +24,5 @@
             <p>©2025 🌴 Emmanuel Ogbonna 🌴Abia, Nigeria</p>
         </footer>
     </body>
+    
 </html>
