--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Emmanuel Ogbonna |   WDD 130</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <meta name="description" content="Welcome to Emmanuel Ogbonna's WDD 130 course homepage. Learn web development and explore exciting projects">
+        <meta name="author" content="Emmanuel Ogbonna">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
 
     <body>
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/">Rafting Site</a>
+                <a href="wwr/">Rafting Website</a>
             </nav>
         </header>
         <main>
@@ -20,6 +22,11 @@
             <img src="images/profile.jpeg" alt="Hello, my name is Emmanuel Ogbonna" width="200">
             <p>Hello! My name is Emmanuel Ogbonna and I am from Abia, Nigeria. I enjoy singing, playing football, cooking and traveling. I am currently studying Software Development and Web Design at BYU Idaho. I am excited to learn more about software development and web design. I am looking forward to creating my own software and website and learning more about the industry. I am excited to see what the future hold for me as i proceed.</p>
         </main>
+        <aside>
+            <h2>Abia</h2>
+            <img src="images/Abia.jpg" alt="Abia landscape">
+            <p>Abia is a state in the Estern Nigeria. It is bordered by Imo to the east, Port Harcourt to the northeast, Ebonyi to the north, Akwa Ibom to the south and Enugu to the west. The state is a center of transportation, education, information technology, and research, and a major international market for trading. Umuahia City, is the state capital, but Aba the largest city and the place we have the Temple of The Church of Jesus Christ of Latter-day Saints (LDS Church).</p>
+        </aside>
         <footer>
             <p>©2025 🌴 Emmanuel Ogbonna 🌴Abia, Nigeria</p>
         </footer>
