--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
 
     <main>
         <div class="hero">
-            <img src="images/rafting2.jpg" alt="Rafting adventure" class="hero-image">
+            <img src="Images/rafting2.jpg" alt="Rafting adventure" class="hero-image">
             <article>
                 <h2 class="mission">Our Mission</h2>
                 <p>To ignite the spirit of adventure by providing safe, thrilling, and unforgetable wgite water rafting
@@ -60,7 +60,7 @@
                     </p>
                 </div>
                 <div class="image-column">
-                    <img src="images/rafting59.jpg" alt="Rapid Adventures">
+                    <img src="Images/rafting59.jpg" alt="Rapid Adventures">
                 </div>
                 <div class="text-column right-column">
                     <p>Today, Rapid Adventures operates across seven states with
@@ -82,23 +82,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="gallery">
                 <figure>
-                    <img src="images/rafting1.jpg" alt="Happy Adventurers">
+                    <img src="Images/rafting1.jpg" alt="Happy Adventurers">
                     <figcaption>Happy Adventurers</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting6.jpg" alt="Big Mallard">
+                    <img src="Images/rafting6.jpg" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting3.jpg" alt="Half Day Adventure">
+                    <img src="Images/rafting3.jpg" alt="Half Day Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting4.jpg" alt="Family Float">
+                    <img src="Images/rafting4.jpg" alt="Family Float">
                     <figcaption>Family Float</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting5.jpg" alt="Wild Rapids">
+                    <img src="Images/rafting5.jpg" alt="Wild Rapids">
                     <figcaption>Wild Rapids</figcaption>
                 </figure>
             </div>
