--- a/wwr/about.html
+++ b/wwr/about.html
@@ -108,9 +108,9 @@
     <footer>
         <p>&copy; 2025 Rapid Adventures | Emmanuel Uchechukwu Ogbonna</p>
         <div class="socialmedia">
-            <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
-            <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
-            <a href="https://instagram.com"><img src="images/instagram.webp" alt="Instagram"></a>
+            <a href="https://facebook.com"><img src="Images/facebook.webp" alt="Facebook"></a>
+            <a href="https://twitter.com"><img src="Images/twitter.webp" alt="Twitter"></a>
+            <a href="https://instagram.com"><img src="Images/instagram.webp" alt="Instagram"></a>
         </div>
     </footer>
 </body>
