--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
         <title>Emmanuel Ogbonna |   WDD 130</title>
         <meta name="description" content="Welcome to Emmanuel Ogbonna's WDD 130 course homepage. Learn web development and explore exciting projects">
         <meta name="author" content="Emmanuel Ogbonna">
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
-
     <body>
         <header>
             <nav>
