--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </main>
         <aside>
             <h2>Abia</h2>
-            <img src="images/Abia.jpg" alt="Abia landscape">
+            <img src="images/abia.jpg" alt="Abia landscape">
             <p>Abia is a state in the Estern Nigeria. It is bordered by Imo to the east, Port Harcourt to the northeast, Ebonyi to the north, Akwa Ibom to the south and Enugu to the west. The state is a center of transportation, education, information technology, and research, and a major international market for trading. Umuahia City, is the state capital, but Aba the largest city and the place we have the Temple of The Church of Jesus Christ of Latter-day Saints (LDS Church).</p>
         </aside>
         <footer>
