--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <h1>Emmanuel Ogbonna | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hello, my name is Emmanuel Ogbonna" width="200">
+            <img src="images/profilee.jpg" alt="Hello, my name is Emmanuel Ogbonna" width="200">
             <p>Hello! My name is Emmanuel Ogbonna and I am from Abia, Nigeria. I enjoy singing, playing football, cooking and traveling. I am currently studying Software Development and Web Design at BYU Idaho. I am excited to learn more about software development and web design. I am looking forward to creating my own software and website and learning more about the industry. I am excited to see what the future hold for me as i proceed.</p>
         </main>
         <aside>
