--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src="pics/logo.jpeg" alt="Rapid Adventures Logo" class="logo">
+        <img src="Image/logo.jpeg" alt="Rapid Adventures Logo" class="logo">
         <h1>White Water Rafting</h1>
         <nav>
             <ul class="nav-links">
@@ -32,7 +32,7 @@
 
     <main>
         <div class="hero">
-            <img src="pics/rafting2.jpg" alt="Rafting adventure" class="hero-image">
+            <img src="image/rafting2.jpg" alt="Rafting adventure" class="hero-image">
             <article>
                 <h2 class="mission">Our Mission</h2>
                 <p>To ignite the spirit of adventure by providing safe, thrilling, and unforgetable wgite water rafting
@@ -60,7 +60,7 @@
                     </p>
                 </div>
                 <div class="image-column">
-                    <img src="pics/rafting59.jpg" alt="Rapid Adventures">
+                    <img src="Image/rafting59.jpg" alt="Rapid Adventures">
                 </div>
                 <div class="text-column right-column">
                     <p>Today, Rapid Adventures operates across seven states with
@@ -82,23 +82,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="gallery">
                 <figure>
-                    <img src="pics/rafting1.jpg" alt="Happy Adventurers">
+                    <img src="Image/rafting1.jpg" alt="Happy Adventurers">
                     <figcaption>Happy Adventurers</figcaption>
                 </figure>
                 <figure>
-                    <img src="pics/rafting6.jpg" alt="Big Mallard">
+                    <img src="Image/rafting6.jpg" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                 </figure>
                 <figure>
-                    <img src="pics/rafting3.jpg" alt="Half Day Adventure">
+                    <img src="Image/rafting3.jpg" alt="Half Day Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="pics/rafting4.jpg" alt="Family Float">
+                    <img src="Image/rafting4.jpg" alt="Family Float">
                     <figcaption>Family Float</figcaption>
                 </figure>
                 <figure>
-                    <img src="pics/rafting5.jpg" alt="Wild Rapids">
+                    <img src="Image/rafting5.jpg" alt="Wild Rapids">
                     <figcaption>Wild Rapids</figcaption>
                 </figure>
             </div>
@@ -108,9 +108,9 @@
     <footer>
         <p>&copy; 2025 Rapid Adventures | Emmanuel Uchechukwu Ogbonna</p>
         <div class="socialmedia">
-            <a href="https://facebook.com"><img src="pics/facebook.webp" alt="Facebook"></a>
-            <a href="https://twitter.com"><img src="pics/twitter.webp" alt="Twitter"></a>
-            <a href="https://instagram.com"><img src="pics/instagram.webp" alt="Instagram"></a>
+            <a href="https://facebook.com"><img src="Image/facebook.webp" alt="Facebook"></a>
+            <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
+            <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
         </div>
     </footer>
 </body>
