--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styless/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
