--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
 
     <main>
         <div class="hero">
-            <img src="image/rafting2.jpg" alt="Rafting adventure" class="hero-image">
+            <img src="Image/rafting2.jpg" alt="Rafting adventure" class="hero-image">
             <article>
                 <h2 class="mission">Our Mission</h2>
                 <p>To ignite the spirit of adventure by providing safe, thrilling, and unforgetable wgite water rafting
