--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Contact Rapid Adventures - Get in touch with our whitewater rafting team. We’re thrilled to hear from you! Whether you have a question about our rafting trips, want to make a reservation, or just want to share your experience, we’re here to help.">
     <meta name="author" content="Emmanuel Uchechukwu Ogbonna">
+    <meta 
+    name="description"
+        content="Contact Rapid Adventures - Get in touch with our whitewater rafting team. We’re thrilled to hear from you! Whether you have a question about our rafting trips, want to make a reservation, or just want to share your experience, we’re here to help.">
     <title>Contact Us | Rapid Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
+    <script src="my-js-file.js" defer></script>
+
 </head>
 
 <body>
@@ -45,6 +48,7 @@
         <section class="map">
             <h2>Find Us</h2>
             <!-- Embed Google Map iframe here -->
+             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d171840.2548023494!2d8.10465292968432!3d6.3571884102589715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1755006631658!5m2!1sen!2sng" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
         <section class="team">
@@ -95,6 +99,7 @@
             <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
             <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
         </div>
+
         <p><a href="Image/contact-wireframe.png" target="_blank">View Contact Page Wireframe</a></p>
     </footer>
 </body>
