--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -11,8 +11,7 @@
     <title>Contact Us | Rapid Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
@@ -47,7 +46,7 @@
         <section class="map">
             <h2>Find Us</h2>
             <!-- Embed Google Map iframe here -->
-             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d171840.2548023494!2d8.10465292968432!3d6.3571884102589715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1755006631658!5m2!1sen!2sng" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d171840.2548023494!2d8.10465292968432!3d6.3571884102589715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1755006631658!5m2!1sen!2sng" width="300" height="200" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
         <section class="team">
