--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -46,7 +46,9 @@
         <section class="map">
             <h2>Find Us</h2>
             <!-- Embed Google Map iframe here -->
-             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d171840.2548023494!2d8.10465292968432!3d6.3571884102589715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1755006631658!5m2!1sen!2sng" width="300" height="200" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             <iframe 
+             class="map-frame"
+             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d171840.2548023494!2d8.10465292968432!3d6.3571884102589715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1755006631658!5m2!1sen!2sng" width="300" height="200" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
         <section class="team">
@@ -68,10 +70,10 @@
         <section class="contact-form">
             <h2>Send Us a Message</h2>
             <form action="#" method="post">
-                <label for="name">Your Name:</label>
+                <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Your Email:</label>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
 
                 <p>Purpose of Message:</p>
@@ -91,7 +93,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Rapid Adventures | Emmanuel Uchechukwu Ogbonna</p>
+        <p>&copy;2025 Rapid Adventures | Emmanuel Uchechukwu Ogbonna</p>
         <div class="socialmedia">
             <a href="https://facebook.com"><img src="Image/facebook.webp" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
