--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,10 +71,10 @@
             <h2>Send Us a Message</h2>
             <form action="#" method="post">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name">
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
 
                 <p>Purpose of Message:</p>
                 <label><input type="radio" name="purpose" value="general"> General Inquiry</label>
