--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -100,7 +100,7 @@
             <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
         </div>
 
-        <p><a href="Image/contact-wireframe.png" target="_blank">View Contact Page Wireframe</a></p>
+        <p><a href="Image/contactwireframe.png" target="_blank">View Contact Page Wireframe</a></p>
     </footer>
 </body>
 
