--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -53,11 +53,13 @@
   </main>
 
   <footer>
-    <p>&copy;2025 White Water Rafting Adventures | <a href="Image/tripswireframe.png" target="_blank">View trips Page Wireframe</a></p>
-        <div class="socialmedia">
-            <a href="https://facebook.com"><img src="Image/facebook.webp" alt="Facebook"></a>
-            <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
-            <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
+    <p>&copy;2025 White Water Rafting Adventures</p>
+    <div class="socialmedia">
+        <a href="https://facebook.com"><img src="Image/facebook.webp" alt="Facebook"></a>
+        <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
+        <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
+        <a href="Image/tripswireframe.png" target="_blank">View trips Page Wireframe</a>
+    </div>
   </footer>
 </body>
 </html>
