--- a/wwr/index.html
+++ b/wwr/index.html
@@ -59,10 +59,11 @@
 
   <footer>
     <p>&copy;2025 White Water Rafting Adventures</p>
-        <div class="socialmedia">
-            <a href="https://facebook.com"><img src="Image/facebook.webp" alt="Facebook"></a>
-            <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
-            <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
+    <div class="socialmedia">
+        <a href="https://facebook.com"><img src="Image/facebook.webp" alt="Facebook"></a>
+        <a href="https://twitter.com"><img src="Image/twitter.webp" alt="Twitter"></a>
+        <a href="https://instagram.com"><img src="Image/instagram.webp" alt="Instagram"></a>
+    </div>
   </footer>
 </body>
 </html>
